<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <!--title部分-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/data_selector_white"
            android:padding="10dp" >
            <!--取消按钮-->
            <TextView
                android:id="@+id/text_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/time_selector_cancel"
                android:maxLength="4"
                android:textColor="@color/data_selector_black"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/img_cancel"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:visibility="gone"/>
            <!--title-->
            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:maxLength="9"
                android:text="@string/time_selector_title"
                android:textColor="@color/data_selector_black"
                android:textSize="20sp" />

            <!--确定按钮-->
            <TextView
                android:id="@+id/text_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/time_selector_sure"
                android:maxLength="4"
                android:textColor="@color/data_selector_black"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/img_sure"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                android:visibility="gone"/>
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/data_selector_gray" />
        <!--时间选择-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/data_selector_white"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp" >
                <!--年-->
                <com.mobile.timeselectlibrary.view.PickerView
                    android:id="@+id/picker_year"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/text_year"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/time_selector_year"
                    android:textColor="@color/data_selector_time_color"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <!--月-->
                <com.mobile.timeselectlibrary.view.PickerView
                    android:id="@+id/picker_month"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="2"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text_month"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/time_selector_month"
                    android:textColor="@color/data_selector_time_color"
                    android:textSize="18sp"
                    android:visibility="gone"/>

                <!--日-->
                <com.mobile.timeselectlibrary.view.PickerView
                    android:id="@+id/picker_day"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="2"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/text_day"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/time_selector_day"
                    android:textColor="@color/data_selector_time_color"
                    android:textSize="18sp"
                    android:visibility="gone"/>

                <!--时-->
                <com.mobile.timeselectlibrary.view.PickerView
                    android:id="@+id/picker_hour"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="2"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text_hour"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/time_selector_hour"
                    android:textColor="@color/data_selector_time_color"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <!--分-->
                <com.mobile.timeselectlibrary.view.PickerView
                    android:id="@+id/picker_minute"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="2"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/text_minute"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/time_selector_minute"
                    android:textColor="@color/data_selector_time_color"
                    android:textSize="18sp"
                    android:visibility="gone" />


                <!--秒-->
                <com.mobile.timeselectlibrary.view.PickerView
                    android:id="@+id/picker_second"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="2"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text_second"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/time_selector_second"
                    android:textColor="@color/data_selector_time_color"
                    android:textSize="18sp"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>